home projects fix on mobile

--- a/css/index.scss
+++ b/css/index.scss
@@ -243,7 +243,6 @@ section.grid-container {
 
 section.new-project {
     background-image: linear-gradient(to bottom, rgba(0,0,0,0.5), rgba(0,0,0,0.0), rgba(0,0,0,0.5)), url(../assets/images/home-page/ellchart-chartered-accountants-cover-image.webp);
-    height: 100vh;
     background-repeat: no-repeat;
     background-position: center;
     background-size: cover;
@@ -252,7 +251,6 @@ section.new-project {
 
 section.car-guvi {
     background-image: linear-gradient(to bottom, rgba(0,0,0,0.0), rgba(0,0,0,0.5)), url(../assets/images/home-page/car-guvi-logo-on-card.webp);
-    height: 100vh;
     background-repeat: no-repeat;
     background-position: center;
     background-size: cover;
